<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="CompetBtnClick"
    android:background="@color/MainPage"
    tools:context=".Clients">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button6"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="WorkoutBtnClick"
            android:text="@string/WORKOUT" />

        <Button
            android:id="@+id/button5"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="ClientsBtnClick"
            android:text="@string/CLIENT" />

        <Button
            android:id="@+id/button4"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="CompetBtnClick"
            android:text="@string/COMPETITION" />

        <Button
            android:id="@+id/button3"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="ProfileBtnClick"
            android:text="@string/PROFILE" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/GreenButtonStyle"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:onClick="CreateClient"
        android:text="@string/Create"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/Headliners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/Clients"
        app:layout_constraintBottom_toTopOf="@+id/ClientsList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ClientsList"
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/list_clients" />

</androidx.constraintlayout.widget.ConstraintLayout>