<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainPage"
    android:onClick="ClientsBtnClick"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button6"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="WorkoutBtnClick"
            android:text="@string/WORKOUT" />

        <Button
            android:id="@+id/button5"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="ClientsBtnClick"
            android:text="@string/CLIENT" />

        <Button
            android:id="@+id/button4"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="CompetBtnClick"
            android:text="@string/COMPETITION" />

        <Button
            android:id="@+id/button3"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="ProfileBtnClick"
            android:text="@string/PROFILE" />

    </LinearLayout>

    <TextView
        android:id="@+id/username"
        style="@style/UsualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="27dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/FirstName"
        style="@style/UsualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="27dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/SecondName"
        style="@style/UsualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="27dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstName" />

    <Button
        android:id="@+id/button9"
        style="@style/WhiteButtonStyle"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="10dp"
        android:onClick="btnEdit"
        android:text="@string/Edit"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        style="@style/Headliners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/Profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>