<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainPage"
    tools:context=".Client">

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button6"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="WorkoutBtnClick"
            android:text="@string/WORKOUT" />

        <Button
            android:id="@+id/button5"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="ClientsBtnClick"
            android:text="@string/CLIENT" />

        <Button
            android:id="@+id/button4"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="CompetBtnClick"
            android:text="@string/COMPETITION" />

        <Button
            android:id="@+id/button3"
            style="@style/MenuButtons"
            android:layout_weight="1"
            android:onClick="ProfileBtnClick"
            android:text="@string/PROFILE" />

    </LinearLayout>

    <Button
        android:id="@+id/button11"
        style="@style/WhiteButtonStyle"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="11dp"
        android:layout_weight="1"
        android:onClick="Measures"
        android:text="@string/Measure"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button10"
        style="@style/WhiteButtonStyle"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:onClick="btnEditClient"
        android:text="@string/Edit"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Headliners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/Client"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ClientsSName"
        style="@style/UsualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/ClientsName"
        style="@style/UsualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/ClientsPhone"
        style="@style/UsualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClientsName" />

    <TextView
        android:id="@+id/ClientsAge"
        style="@style/UsualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClientsPhone" />

    <TextView
        android:id="@+id/ClientsGoal"
        style="@style/UsualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClientsAge" />

    <TextView
        android:id="@+id/ClientsNotes"
        style="@style/UsualText"
        android:layout_width="339dp"
        android:layout_height="358dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClientsGoal" />

</androidx.constraintlayout.widget.ConstraintLayout>